# Path-tracer-using-OpenGL

./: CMakeLists.txt  CMakeLists_old.txt  README.md  build.sh  imgui.ini  path_tracer
source/: Main.cpp  mygui.cpp
